--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ menu:
   关于我: /about/
 
 # Link to your avatar | 填写头像地址
-avatar: /img/avatar.png
+avatar: /img/avatar.jpg
 
 # Small icon of Your site | 站点小图标地址
 favicon: /favicon.png
@@ -40,9 +40,9 @@ since: 2016
 ## https://github.com/hexojs/hexo-generator-feed
 
 subnav:
-  Email: "mailto:123@123.com"
-  #新浪微博: "sina weibo"
-  GitHub: "#"
+  Email: "mailto:714737083@qq.com"
+  新浪微博: "https://weibo.com/Sanakey"
+  GitHub: "https://github.com/Sanakey"
   #V2EX: "#"
   RSS: "/atom.xml"
   #知乎: "zhihu"
@@ -52,19 +52,20 @@ subnav:
   #博客园: "cnblogs"
   #CSDN: ""
   #Coding: ""
-  #网易云音乐: "netease"
+  网易云音乐: "https://music.163.com/#/user/home?id=97522164"
   #虾米音乐: "xiami"
-  #bilibili: ""
+  bilibili: "https://space.bilibili.com/2016622/#/"
   #AcFun: ""
   #niconico: ""
   #Quora: ""
   #Facebook: "#"
   #Google: "#"
-  #Twitter: "#"
+  Twitter: "https://twitter.com/xlzx034"
   #LinkedIn: "#"
-  #QQ: "#"
+  QQ: "714737083"
   #微信: "Wechat"
   #PayPal: "#"
+  Steam: "https://steamcommunity.com/id/Sanakey/"
   #StackOverflow: "#"
   #CodePen: ""
   #Plunker: ""
@@ -183,11 +184,11 @@ tagcloud: true
 friends:
   Hexo: https://hexo.io
   GitHub: https://pages.github.com/
-  MOxFIVE: http://moxfive.xyz/
+  #MOxFIVE: http://moxfive.xyz/
 #friends: false
 
 #是否开启“关于我”。
-aboutme: 专注于前端
+aboutme: 前端路上的小白
 #aboutme: false
 
 # Open link in a new tab | 是否在新窗口打开链接
@@ -230,8 +231,8 @@ tab_title_change:
 ## Insatall below plugin to take effect | 使用搜索需先安装对应插件
 ## https://github.com/PaicHyperionDev/hexo-generator-search
 search: 
-  #on: true
-  onload: false
+  on: true
+  #onload: false
   ## true: get search.xml file when the page has loaded
   ## false: get the file when search box gets focus
 
