--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ menu:
   #随笔: /tags/随笔
   标签云: /tags/
   关于我: /about/
+  收藏: /collection/
 
 # Link to your avatar | 填写头像地址
 avatar: /img/avatar.jpg
@@ -40,7 +41,7 @@ since: 2016
 ## https://github.com/hexojs/hexo-generator-feed
 
 subnav:
-  Email: "mailto:714737083@qq.com"
+  Email: "mailto:sanakey@qq.com"
   新浪微博: "https://weibo.com/Sanakey"
   GitHub: "https://github.com/Sanakey"
   #V2EX: "#"
@@ -60,7 +61,7 @@ subnav:
   #Quora: ""
   #Facebook: "#"
   #Google: "#"
-  Twitter: "https://twitter.com/xlzx034"
+  Twitter: "https://twitter.com/sanakeysora"
   #LinkedIn: "#"
   QQ: "714737083"
   #微信: "Wechat"
@@ -143,7 +144,7 @@ color_scheme:
 
 highlight_style:
   on: true
-  inline_code: 1  # Value: 0 - 9 可选
+  inline_code: 2  # Value: 0 - 9 可选
   code_block: 4  # Value: 0 - 4
   # Set inline_code to style highlight text
   # Chose a highlight theme for code block
@@ -151,8 +152,8 @@ highlight_style:
   # 通过 code_block 切换内置代码高亮配色主题
 
 blockquote_style:
-  #on: true
-  blockquote: 1  # Value: 0 - 7 可选
+  on: true
+  blockquote: 2  # Value: 0 - 7 可选
   # 自定义文章「引用部分」的样式
 
 # Headings Style | 标题风格
@@ -172,7 +173,7 @@ copyright: true
 toc:
   on: true
   list_number: true # 目录序号
-  max_depth: 3  # 1 - 6 (h1-h6) 目录最大级数
+  max_depth: 4  # 1 - 6 (h1-h6) 目录最大级数
   nowrap: false # Keep title on same line | 目录标题不换行
 
 # 是否开启主页及加载头像时的动画效果
@@ -255,7 +256,7 @@ fancybox: true
 
 # Display Math(LaTeX, MathML...) | 数学公式支持
 ## https://www.mathjax.org/
-mathjax: true
+mathjax: false
 
 # Socail Share | 是否开启分享
 share: 
@@ -303,7 +304,7 @@ progressBar:
 # 文章末尾是否显示打赏按钮
 donate:
   on: true
-  reward_comment: 感谢打赏，您的支持将鼓励我继续创作！
+  reward_comment: 感谢打赏，错误之处欢迎指正交流(`・ω・´) !~~
   wechatpay: /img/233.gif
   alipay: /img/333.gif
 
